added ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,45 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+output_files/TDM_Test.jdi
+*.xrf
+*.vho
+simulation/modelsim/TDM_Test.sft
+*.summary
+output_files/TDM_Test.sta.rpt
+*.sld
+output_files/TDM_Test.pin
+*.rpt
+output_files/TDM_Test.fit.smsg
+*.done
+output_files/Chain1.cdf
+incremental_db/README
+*.hdb
+*.kpt
+incremental_db/compiled_partitions/TDM_Test.root_partition.map.hbdb.sig
+*.cdb
+incremental_db/compiled_partitions/TDM_Test.root_partition.map.dpi
+*.rcfdb
+*.qmsg
+db/TDM_Test.asm.rdb
+*.ddb
+db/TDM_Test.cbx.xml
+*.bpm
+db/TDM_Test.cmp.idb
+*.logdb
+db/TDM_Test.cmp.rdb
+*.db_info
+db/TDM_Test.hier_info
+*.hif
+db/TDM_Test.logic_util_heuristic.dat
+*.html
+*.rdb
+db/TDM_Test.lpc.txt
+*.ammdb
+db/TDM_Test.quiproj.3000.rdr.flock
+*.sci
+db/TDM_Test.smart_action.txt
+*.tdb
+db/TDM_Test.tmw_info
+*.hsd
+incremental_db/compiled_partitions/TDM_Test.root_partition.cmp.dfp
